fix #2